--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "@apollo/client": "^3.4.13",
     "@auth0/auth0-react": "^1.8.0",
-    "@reduxjs/toolkit": "^1.6.1",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.7.0",
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
-    "firebase": "^9.1.2",
+    "firebase": "^9.9.0",
     "graphql": "^15.6.0",
     "json-server": "^0.16.3",
     "json-server-auth": "^2.1.0",
@@ -18,10 +21,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-redux": "^7.2.4",
+    "react-redux": "^7.2.8",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
@@ -48,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "firebase": "^9.9.0"
   }
 }
