--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "4.0.3",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.1",
+    "typescript": "^4.8.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -54,6 +55,9 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.3.3",
+    "@types/redux-persist": "^4.3.1",
+    "@types/styled-components": "^5.1.26",
     "firebase": "^9.9.0"
   }
 }
