--- a/package.json
+++ b/package.json
@@ -3,33 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.4.13",
-    "@auth0/auth0-react": "^1.8.0",
     "@craco/craco": "^7.1.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.7.0",
-    "@reduxjs/toolkit": "^1.8.3",
+    "@reduxjs/toolkit": "^2.0.1",
     "@stripe/react-stripe-js": "^2.3.1",
     "@stripe/stripe-js": "^2.1.10",
-    "@tanstack/react-query": "^4.35.7",
-    "@tanstack/react-query-devtools": "^4.35.7",
+    "@tanstack/react-query": "^5.17.15",
+    "@tanstack/react-query-devtools": "^5.0.0-alpha.91",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "@types/react": "^18.0.33",
     "autoprefixer": "^10.4.14",
     "axios": "^0.21.1",
-    "body-parser": "^1.20.2",
     "concurrently": "^8.2.1",
     "express": "^4.18.2",
     "firebase": "^9.9.0",
-    "framer-motion": "^10.16.4",
-    "graphql": "^15.6.0",
-    "json-server": "^0.16.3",
-    "json-server-auth": "^2.1.0",
-    "jwt-decode": "^3.1.2",
-    "lodash": "^4.17.21",
+    "framer-motion": "^10.18.0",
     "postcss": "^8.4.21",
     "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
@@ -37,7 +28,6 @@
     "react-hook-form": "^7.49.3",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.8",
-    "react-router": "^5.2.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
