--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.4",
+    "react-hook-form": "7.45.4",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.8",
     "react-router-dom": "^5.2.1",
