--- a/package.json
+++ b/package.json
@@ -69,9 +69,11 @@
     "@tanstack/eslint-plugin-query": "^4.36.0",
     "@types/react-dom": "^18.2.8",
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux-mock-store": "^1.0.6",
     "@types/redux-persist": "^4.3.1",
     "@types/styled-components": "^5.1.26",
     "firebase": "^9.9.0",
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "redux-mock-store": "^1.5.4"
   }
 }
