--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.4.14",
     "axios": "^0.21.1",
     "concurrently": "^8.2.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase": "^9.9.0",
     "framer-motion": "^10.18.0",
@@ -40,7 +41,8 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "concurrently \"craco start\" \"node server/server.js\"",
+    "start": "craco start",
+    "server": "node server/server.js",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
@@ -66,14 +68,21 @@
     ]
   },
   "devDependencies": {
+    "@playwright/test": "^1.46.0",
     "@tanstack/eslint-plugin-query": "^4.36.0",
     "@types/react-dom": "^18.2.8",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-mock-store": "^1.0.6",
     "@types/redux-persist": "^4.3.1",
     "@types/styled-components": "^5.1.26",
+    "cypress": "^13.13.2",
     "firebase": "^9.9.0",
     "gh-pages": "^4.0.0",
     "redux-mock-store": "^1.5.4"
-  }
+  },
+  "proxy": "http://localhost:4242/",
+  "main": "index.js",
+  "repository": "https://github.com/tomasvc/cloth-e-commerce.git",
+  "author": "tomv <tomv@elysium.uk>",
+  "license": "MIT"
 }
