--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "styled-components": "^5.3.1",
     "tailwindcss": "^3.3.1",
     "typescript": "^4.8.2",
+    "use-debounce": "^10.0.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
