--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@craco/craco": "^7.1.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@hookform/resolvers": "^3.9.0",
     "@mui/material": "^5.7.0",
     "@reduxjs/toolkit": "^2.0.1",
     "@stripe/react-stripe-js": "^2.3.1",
@@ -13,7 +14,8 @@
     "@tanstack/react-query": "^5.17.15",
     "@tanstack/react-query-devtools": "^5.0.0-alpha.91",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.0.33",
     "autoprefixer": "^10.4.14",
     "axios": "^0.21.1",
@@ -26,10 +28,10 @@
     "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "7.45.4",
+    "react-hook-form": "^7.45.4",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.8",
-    "react-router-dom": "^5.2.1",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
     "stripe": "^13.9.0",
@@ -37,7 +39,8 @@
     "tailwindcss": "^3.3.1",
     "typescript": "^4.8.2",
     "use-debounce": "^10.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "zod": "^3.23.8"
   },
   "scripts": {
     "predeploy": "npm run build",
